--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -4,5 +4,10 @@ $lightGrey: #dadde2;
 $darkGrey: #828d9d;
 $offWhite: #fffeff;
 $pink: #ff718e;
-
+$grid-columns: 12;
+$grid-max-width: 1200px;
+$breakpoint-small: "only screen and (min-width: 0px)";
+$breakpoint-medium: "only screen and (min-width: 768px)";
+$breakpoint-large: "only screen and (min-width: 1008px)";
+$breakpoint-xl: "only screen and (min-width: 1300px)";
 
